[project]
requires-python = ">=3.10"
name = "SilverDict-server"
version = "1.1.0"
description = "Web-Based Alternative to GoldenDict"
authors = [{ name = "Yi Xing", email = "blandilyte@gmail.com" }]
dependencies = [
    "PyYAML>=6.0.1",
    "Flask>=2.3.2",
    "Flask-Cors>=3.0.10",
    "waitress>=2.1.2",
    "python-idzip>=0.3.9",
    "python-lzo>=1.15",
    "xxhash>=3.2.0",
    "dsl2html>=0.1.2",
    "xdxf2html>=0.1.0",
    "requests>=2.31.0",
]
readme = "README.md"
license = { text = "GPL-3.0-only" }

[project.optional-dependencies]
hunspell = ["hunspell>=0.5.5"]
sibel = ["sibel>=0.1.0"]
opencc = ["opencc>=1.1.7"]
lxml = ["lxml>=5.1.0"]

[tool.setuptools.packages.find]
where = ["server"]

[tool.yapf]
based_on_style = "google"
column_limit = 115
use_tabs = true

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
fmt = ["yapf>=0.40.2"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
